NewDrawingBox: Pop up no longer has scrollbar on right side

--- a/client/src/app/components/sidebar/new-drawing-box/new-drawing-box.component.scss
+++ b/client/src/app/components/sidebar/new-drawing-box/new-drawing-box.component.scss
@@ -2,7 +2,8 @@
     font-family: 'Rubik', serif;
 }
 
-#saveButton, #newButton {
+#saveButton,
+#newButton {
     align-content: center;
     font-size: large;
     background-color: coral;
@@ -17,6 +18,7 @@
     justify-content: space-between;
     flex-direction: column;
     display: flex;
+    overflow: hidden;
 }
 
 .mat-dialog-title {
